--- a/scripts/0.md
+++ b/scripts/0.md
@@ -2,246 +2,123 @@
 subtitles: auto
 -------------------------------------------------------------------------------
 ```
-Variables, Types,
-Operators, Expressions
+Data Representation
+(Reading Binary)
 ```
 
-This video discusses variables, types, operators, and expressions.  These
-concepts are fundamental to most programming languages.
-
+This video gives a brief discussion of how data on a computer is typically
+stored, and how we can insert that data into our program.
 -------------------------------------------------------------------------------
 ```
-Variables
+Binary
 ```
+Every piece of data, including the code you write, is stored in the computer as
+bits.  A bit is an abstract piece of data represented by a 1 or 0.  Typically
+the physical implementation of a bit is a voltage level coming from tiny
+devices in your computer.  These devices vary even within a single computer.
+The fastest devices for reading and writing bits are the transistors in your
+CPU.  The next fastest are the capacitors in your RAM.  The next fastest are
+the magnets in your hard drive.  The next fastest is on the internet or
+network.
 
-Variables are a fundamental unit of computing.  They are similar, though not
-exactly the same as variables from mathematics.  In mathematics, a variable
-might be used to represent some unknown.  For example, given an equation, solve
-for the variable x.
+It's all right if that is gibberish to you.  If you'd like learn more about all
+of that, you should take a computer architecture class.  You won't be needing
+it here.
 
-In computing, on the other hand, the value of a variable
-must always be known.  It is only a way of attaching a name to data.
-
+It might not seem like you can do a lot with just ones and zeros, but it turns
+out you can represent basically anything your heart desires.
 -------------------------------------------------------------------------------
-In C, all variables must be declared before being used.  This is an example of
-several valid declarations in C.
-
-```c
-int no_value;
-int variable = 0;
-int _variable = 1;
-int my_variable_2 = 2;
-int myVariable3 = 3;
-float pi = 3.14;
 ```
-
--------------------------------------------------------------------------------
-Here are some examples of declarations that are NOT valid.  Any program
-including any of these would fail to compile.
-
-```c
-// None of these delcarations are valid
-int 1variable;
-int var!able;
-int my variable;
-int if;
-int void;
-int default;
+Binary Numbers
 ```
+Numbers are the first obvious item of interest.  You are used to base 10
+(meaning 10 symbols, 0 through 9) but computers obviously prefer base 2
+(meaning 2 symbols 0 and 1).  So how do we represent the numbers we known and
+love?  Well let's see if you can find the pattern.
 
--------------------------------------------------------------------------------
-Basically, your variable can be any permutation of letters, digits, and
-underscores, so long as it does not start with a digit, and it is not a
-reserved word.  The reserved words of C are shown here.  They all have
-special functions which we will learn about later.
+0 and 1 are represented the same as in base 10, 2 is where things get
+interesting.  Just as when we get to 10 in base 10, we have to add another
+digit when we get to 2 in base 2, giving us the digits one zero.  Here is
+a short table of numbers in their decimal and binary representation.
 
 ```md
-break else long switch case enum register typedef
-char extern return union const float short unsigned
-continue for signed void default goto sizeof volatile 
-do if static while
+| 0 | 1 | 2  | 3  | 4   | 5   | 6   | 7   |
+|---|---|----|----|-----|-----|-----|-----|
+| 0 | 1 | 10 | 11 | 100 | 101 | 110 | 111 |
 ```
 
--------------------------------------------------------------------------------
-While this gives us a lot of possibilities, you should always ask whether you
-should before you ask whether you can.  What follows is a quote from "The C
-Programming Language" by Brian Kerninghan and Dennis Ritchie.
+The method of finding the value of an N bit binary number in decimal goes like
+this:
 
-(voice: William)
+1. Number the bits from 0 at the right to N-1 at the left
+2. For every bit, if it is 1, add 2 to the power of its number otherwise add 0
 
-"It’s wise to choose variable names that are related to the purpose of the
-variable, and that are unlikely to get mixed up typographically. We tend to use
-short names for local variables, especially loop indices, and longer names for
-external variables"
+A similar algorithm applies for a decimal number, except you add the digit
+times 10 to the power of its number.  The largest number you can represent
+with this scheme is 2 to the N, minus 1.  Can you generalize this to other
+bases?
 
-```md
-"It’s wise to choose variable names that are related to the purpose of the
-variable, and that are unlikely to get mixed up typographically. We tend to use
-short names for local variables, especially loop indices, and longer names for
-external variables"
-```
+This is all well and good for positive numbers, but how about negative?
+Usually we add a minus sign, but computers only have ones and zeros.  Your
+first reaction might be to add another bit to the left and maybe 0 would
+represent positive and 1 would represent negative.  Or maybe add an extra bit
+to the left and then flip all of the bits if it's negative.  These methods
+are called signed magnitude representation and one's complement.  We won't
+talk about those because they have some problems are rarely used anymore.
+The main representation used now adays is called two's complement.
 
-(voice: Charles)
+With two's complement, we add a bit to the left and assign it a numerical value
+just like all the other bits.  What value should we assign to make things 
+rougly symmetric?  If we give it the value of negative two times the next
+largest value, we can represent everything from that negative number to our
+original largest value.
 
-Naming is mundane, but extremely important in all of programming.  You should
-err on the side of caution toward longer more descriptive variable names.
-
--------------------------------------------------------------------------------
-```
-Types
-```
-
-Types are almost as prevalent as variables in programming.  In C, every
-variable has a type.  It is there for your own safety, to ensure that you only
-do things that you are allowed to do with the data stored in a variable.
-
-Please note that many types do not have standard definition in terms of the
-amount of storage provided for them.  In the following descriptions, I will do
-my best to tell you the most restrictve scenario, which is typically what you
-should design for if you want your program to work across multiple systems.
-
--------------------------------------------------------------------------------
-There are quite few types in C, making it easy to learn all of them.  The
-fundamental types are: char, int, float, and double.
-
-```md
-* char
-* int
-* float
-* double
-```
-
--------------------------------------------------------------------------------
-A char represents a character, like 'A', '0' or hyphen for example.  Note that
-if they are declared with a value, that value must be surrounded with single
-quotes, not double quotes.
-
-```c
-char a = 'A';
-char b = '0';
-char c  = '-';
-```
-
--------------------------------------------------------------------------------
-An int is used to represent an integer like -30, 12 or 1e5.
-
-```c
-int a = -30;
-int b = 12;
-int c = 1e5;
-```
-
--------------------------------------------------------------------------------
-A float is used to represent non integer numbers like -2.7, 5.3, or 2e-6
-
-```c
-float a = -2.7;
-float b = 5.3;
-float c = 2e-6;
-```
-
--------------------------------------------------------------------------------
-Finally, a double is like a float but it is more precise and takes up more
-space.  We will look at the difference in more depth shortly.
-
-```c
-double a = -2.7;
-double b = 5.3;
-double c = 2e-6;
-```
+It's probably not obvious to you why this is a better choice than the others.
+For now you will have to trust that it has a lot of convenient properties.
 
 -------------------------------------------------------------------------------
 ```
-Type Modifiers
+Characters
 ```
-
-Type modifiers allow us to give more detail as to how we want our variable
-to be treated and how much space we get for it.  The type modifiers in C
-are short, long, signed, and unsigned.  
-
-```md
-* short
-* long
-* signed
-* unsigned
-```
-
--------------------------------------------------------------------------------
-Some examples of valid usage are given here.  They can be used by placing them
-before the type, and other modifiers, but not every modifier is applicable to
-every type.
-
-```c
-signed char = 'a';
-short int a = 32767;
-long int b = 2147483647;
-signed int c = -1;
-usigned int d = 1;
-long double = 12345.67890
-```
--------------------------------------------------------------------------------
-```
-Signed and Unsigned
-```
-The signed and unsigned modifiers can be applied only to chars and integers.
-Signed means that the value can be negative, and unsigned means it can only be
-positive.  By default chars can be either signed or unsigned depending on the
-machine.  However, integers are always signed by default.
-
-A char is always one byte, or 8 bits.  Therefore, Unsigned chars can hold
-values in the range of 0 to 255, while signed chars can hold values on the
-range of -127 to 127.
-
-Signed integers have at least 2 bytes or 16 bits.  Therefore, they can hold
-values at least in the range of -32,767 to 32,767.  Unsigned integers have the
-same nubmer of bits and therefore can store any value in the range of 0 to
-65,635.
-
-(font-size: 100)
-
-```md
-|      | bits | signed          | unsigned  |
-|------|------|-----------------|-----------|
-| char | 8    | [-128, 127]     | [0, 255]  |
-| int  | 16   | [-32768, 32767] | [0, 65635 |
-```
--------------------------------------------------------------------------------
-```
-Short and Long
-```
-The short and long modifiers can be applied only to integers and doubles,
-though a long double is relatively rare.  Note that in the case of integers,
-one may apply the long modifier up to two times, and combine it with the signed
-or unsigned modifiers.
-
-Short integers have at least 2 bytes and are guaranteed to have equal or fewer
-bytes than an int.  This means that short integers can hold values at least in
-the range -32,767 to 32,767.  Long integers have at least 4 bytes, and long
-long integers have at least 8 bytes.  The resulting maximum values are shown
-in the table.
-
-Finally, a long double typically has more precision than a double, but the
-exact size is not specified in the C standard.  This means it is implementation
-dependent but typically ranges from 10 to 16 bytes.  The math for determining
-its range is harder than the math for integers, and we won't go through it
+Characters are similar to numbers.  In fact, you can think of each character as
+being represented by a number.  One very command and very basic format is
+ASCII.  Typically any text files on your computer, including code, are stored
+in this format.  You may be able to run "man ascii" and get a nice chart of
+numbers and their corresponding letters.  Make sure to scroll down to the
+decimal set.  ASCII uses 7 bits to represent many english characters.  For more
+complex character sets, UTF8 is common, though you won't need to know about it
 here.
 
-(font-size: 60)
+Let's go through some simple conversion examples.
 
-```md
-|               | bits | min value            | max value           | smallest difference |
-|---------------|------|----------------------|---------------------|---------------------|
-| short int     | 16   | -32768               | 32767               | 1                   |
-| long int      | 32   | -2147483647          | 2147483647          | 1                   |
-| long long int | 64   | -9223372036854775807 | 9223372036854775807 | 1                   |
-| long double   | 128  | -1.18973e+4932       | 1.18973e+4932       | 1.0842e-19          |
-```
+Say someone gives you the binary number "00110101"  First, convert it to an
+integer with the method we discussed earlier: 1 + 4 + 16 + 32 = 53.  Now check
+your handy ASCII table and find that this number corresponds to the character
+"5".  Note that this is different than the number 5 which has a binary
+representation of "00000101"!
+
+Now how would you find the binary representation of the letter "A"?  Just do
+the same in reverse.  Looking up the letter "A" in the ASCII table gives
+us 65.  Converting to binary is relatively easy here.  The largest power
+of 2 less than 65 is 64 (2 to the power of 6) giving a remainder of 1.  Then
+the 1 is a power of 2 (2 to the power of 0) so we get the binary number
+"01000001"
+
+There you have it, you know know how to read and write binary.
+
 -------------------------------------------------------------------------------
 ```
-Conclusion
+Floating Point Numbers
 ```
-This is a lot to information to absorb.  Lucky for you, all of this information
-is built into the C language itself.  If you pound include limits.h and
-float.h, you can access the limits we discussed here as "macros" such as
-SHORT_MAX, INT_MAX, LONG_MAX, FLT_MAX and more.  See example 0.c for a more
-complete demonstration.
+Now, there is one more basic kind of number that has a non-obvious
+representation: numbers with decimal points.  The main method we will use
+to represent these numbers is called "floating point".  This is very similar
+to scientific notation.  For example consider the number 32e-4 (or 32 times
+10 to the -4).  While this number can be interpreted as the decimal number
+0.0032, we encoded its value using only the integers 32 and -4.  Note how the
+nubmer to the right of the "e" only serves to move around the decimal.  This
+is what is meant by "floating" point.  The standard floating point format
+assigns one bit to the sign of the number, some bits for the first number,
+and some bits for the second number.  Note that I am skipping over a lot of
+nuance and complexity here, but suffice it to say this will be all you need to
+know to learn basic programming.
