--- a/scripts/0.md
+++ b/scripts/0.md
@@ -1,18 +1,11 @@
--------------------------------------------------------------------------------
-subtitles: auto
--------------------------------------------------------------------------------
-```
-Data Representation
-(Reading Binary)
-```
+# Data Representation (Reading Binary)
 
-This video gives a brief discussion of how data on a computer is typically
+This section gives a brief discussion of how data on a computer is typically
 stored, and how we can insert that data into our program.
 
 -------------------------------------------------------------------------------
-```
-Binary
-```
+## Binary
+
 Every piece of data, including the code you write, is stored in the computer as
 bits.  A bit is an abstract piece of data represented by a 1 or 0.  Typically
 the physical implementation of a bit is a voltage level coming from tiny
@@ -30,9 +23,7 @@ It might not seem like you can do a lot with just ones and zeros, but it turns
 out you can represent almost basically anything your heart desires.
 
 -------------------------------------------------------------------------------
-```
-Binary Numbers
-```
+## Binary Numbers
 Numbers are the first obvious item of interest.  You are used to base 10
 (meaning 10 symbols, 0 through 9) but computers obviously prefer base 2
 (meaning 2 symbols, 0 and 1).  So how do we represent the numbers we known and
@@ -79,9 +70,8 @@ It's probably not obvious to you why this is a better choice than the others.
 For now you will have to trust that it has a lot of convenient properties.
 
 -------------------------------------------------------------------------------
-```
-Characters
-```
+## Characters
+
 Characters are similar to numbers.  In fact, you can think of each character as
 being represented by a number.  One very common and very basic format is
 ASCII.  Typically any text files on your computer, including code, are stored
@@ -109,9 +99,7 @@ number "01000001"
 There you have it, you know know how to read and write binary.
 
 -------------------------------------------------------------------------------
-```
-Floating Point Numbers
-```
+## Floating Point Numbers
 Now, there is one more basic kind of number that has a non-obvious
 representation, numbers with decimal points.  The main method we will use
 to represent these numbers is called "floating point".  This is very similar
