--- a/scripts/0.md
+++ b/scripts/0.md
@@ -23,7 +23,7 @@ It might not seem like you can do a lot with just ones and zeros, but it turns
 out you can represent almost basically anything your heart desires.
 
 -------------------------------------------------------------------------------
-## Binary Numbers
+## Integers
 Numbers are the first obvious item of interest.  You are used to base 10
 (meaning 10 symbols, 0 through 9) but computers obviously prefer base 2
 (meaning 2 symbols, 0 and 1).  So how do we represent the numbers we known and
@@ -34,11 +34,9 @@ interesting.  Just as when we get to 10 in base 10, we have to add another
 digit when we get to 2 in base 2, giving us the digits one zero.  Here is
 a short table of numbers in their decimal and binary representation.
 
-```md
 | 0 | 1 | 2  | 3  | 4   | 5   | 6   | 7   |
 |---|---|----|----|-----|-----|-----|-----|
 | 0 | 1 | 10 | 11 | 100 | 101 | 110 | 111 |
-```
 
 The method of finding the value of an N bit binary number in decimal goes like
 this.
