--- a/scripts/0.md
+++ b/scripts/0.md
@@ -34,9 +34,13 @@ interesting.  Just as when we get to 10 in base 10, we have to add another
 digit when we get to 2 in base 2, giving us the digits one zero.  Here is
 a short table of numbers in their decimal and binary representation.
 
+<center>
+
 | 0 | 1 | 2  | 3  | 4   | 5   | 6   | 7   |
 |---|---|----|----|-----|-----|-----|-----|
 | 0 | 1 | 10 | 11 | 100 | 101 | 110 | 111 |
+
+</center>
 
 The method of finding the value of an N bit binary number in decimal goes like
 this.
