--- a/scripts/0.md
+++ b/scripts/0.md
@@ -34,19 +34,24 @@ interesting.  Just as when we get to 10 in base 10, we have to add another
 digit when we get to 2 in base 2, giving us the digits one zero.  Here is
 a short table of numbers in their decimal and binary representation.
 
-<center>
-
 | 0 | 1 | 2  | 3  | 4   | 5   | 6   | 7   |
 |---|---|----|----|-----|-----|-----|-----|
 | 0 | 1 | 10 | 11 | 100 | 101 | 110 | 111 |
-
-</center>
 
 The method of finding the value of an N bit binary number in decimal goes like
 this.
 
 1. Number the bits from 0 at the right to N minus 1 at the left
 2. For every bit, if it is 1, add 2 to the power of its number otherwise add 0
+
+This method is summarized in this table for finding the decimal value of the
+binary integer `10011001`
+
+| 7   | 6  | 5  | 4  | 3 | 2 | 1 | 0 | sum |
+|-----|----|----|----|---|---|---|---|-----|
+| 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | 255 |
+| 1   | 0  | 0  | 1  | 1 | 0 | 0 | 1 | N/A |
+| 128 |    |    | 16 | 8 |   |   | 1 | 153 |
 
 A similar algorithm applies for a decimal number, except you add the digit
 times 10 to the power of its number.  The largest number you can represent
