--- a/scripts/0.md
+++ b/scripts/0.md
@@ -45,13 +45,13 @@ this.
 2. For every bit, if it is 1, add 2 to the power of its number otherwise add 0
 
 This method is summarized in this table for finding the decimal value of the
-binary integer `10011001`
+binary integer `10011001` to its decimal representation, `153`.
 
-| 7   | 6  | 5  | 4  | 3 | 2 | 1 | 0 | sum |
-|-----|----|----|----|---|---|---|---|-----|
-| 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | 255 |
-| 1   | 0  | 0  | 1  | 1 | 0 | 0 | 1 | N/A |
-| 128 |    |    | 16 | 8 |   |   | 1 | 153 |
+| `n`       | 7   | 6  | 5  | 4  | 3 | 2 | 1 | 0 | sum |
+|-----------|-----|----|----|----|---|---|---|---|-----|
+| `2^n`     | 128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 | 255 |
+| `bit`     | 1   | 0  | 0  | 1  | 1 | 0 | 0 | 1 | N/A |
+| `2^n*bit` | 128 |    |    | 16 | 8 |   |   | 1 | 153 |
 
 A similar algorithm applies for a decimal number, except you add the digit
 times 10 to the power of its number.  The largest number you can represent
