--- a/scripts/0.md
+++ b/scripts/0.md
@@ -71,10 +71,17 @@ With two's complement, we add a bit to the left and assign it a numerical value
 just like all the other bits.  What value should we assign to make things 
 roughly symmetric?  If we give it the value of negative two times the next
 largest value, we can represent everything from that negative number to our
-original largest value.
+original largest value.  Here we demonstrate the conversion of the same number
+as before, except we interpret it as a two's complement representation
 
-It's probably not obvious to you why this is a better choice than the others.
-For now you will have to trust that it has a lot of convenient properties.
+| `n`       |    7 |  6 |  5 |  4 | 3 | 2 | 1 | 0 |  sum |
+|-----------|-----:|---:|---:|---:|--:|--:|--:|--:|-----:|
+| `2^n`     |  128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 |  255 |
+| `bit`     |    1 |  0 |  0 |  1 | 1 | 0 | 0 | 1 |  N/A |
+| `2^n*bit` | -128 |    |    | 16 | 8 |   |   | 1 | -103 |
+
+Note that the process is entirely the same, except for how we interpret the
+leftmost bit.
 
 -------------------------------------------------------------------------------
 ## Characters
