--- a/scripts/0.md
+++ b/scripts/0.md
@@ -54,9 +54,11 @@ binary integer `10011001` to its decimal representation, `153`.
 | `2^n*bit` | 128 |    |    | 16 | 8 |   |   | 1 | 153 |
 
 A similar algorithm applies for a decimal number, except you add the digit
-times 10 to the power of its number.  The largest number you can represent
-with this scheme is 2 to the N, minus 1.  Can you generalize this to other
+times 10 to the power of its number.  Can you generalize this to other
 bases?
+
+*Question: What are the maximum and minimum representable values for an 8-bit
+number using this scheme?*
 
 This is all well and good for positive numbers, but how about negative?
 Usually we add a minus sign, but computers only have ones and zeros.  Your
@@ -75,13 +77,16 @@ original largest value.  Here we demonstrate the conversion of the same number
 as before, except we interpret it as a two's complement representation
 
 | `n`                |    7 |  6 |  5 |  4 | 3 | 2 | 1 | 0 |  sum |
-|--------------------|-----:|---:|---:|---:|--:|--:|--:|--:|-----:|
+|:-------------------|-----:|---:|---:|---:|--:|--:|--:|--:|-----:|
 | `2^n(*-1 if n==7)` | -128 | 64 | 32 | 16 | 8 | 4 | 2 | 1 |  255 |
 | `bit`              |    1 |  0 |  0 |  1 | 1 | 0 | 0 | 1 |  N/A |
 | `2^n*bit`          | -128 |    |    | 16 | 8 |   |   | 1 | -103 |
 
 Note that the process is entirely the same, except for how we interpret the
 leftmost bit.
+
+*Question: What are the maximum and minimum representable values for an 8-bit
+number using this scheme?*
 
 -------------------------------------------------------------------------------
 ## Characters
