--- a/scripts/0.md
+++ b/scripts/0.md
@@ -57,8 +57,8 @@ A similar algorithm applies for a decimal number, except you add the digit
 times 10 to the power of its number.  Can you generalize this to other
 bases?
 
-*Question: What are the maximum and minimum representable values for an 8-bit
-number using this scheme?*
+**Question: What are the maximum and minimum representable values for an 8-bit
+number using this scheme?**
 
 This is all well and good for positive numbers, but how about negative?
 Usually we add a minus sign, but computers only have ones and zeros.  Your
@@ -83,10 +83,11 @@ as before, except we interpret it as a two's complement representation
 | `2^n*bit`          | -128 |    |    | 16 | 8 |   |   | 1 | -103 |
 
 Note that the process is entirely the same, except for how we interpret the
-leftmost bit.
+leftmost bit.  You could also see this as finding the regular value, and
+then subtracting 256 (`2^N`).
 
-*Question: What are the maximum and minimum representable values for an 8-bit
-number using this scheme?*
+**Question: What are the maximum and minimum representable values for an 8-bit
+number using this scheme?**
 
 -------------------------------------------------------------------------------
 ## Characters
