--- a/scripts/0.md
+++ b/scripts/0.md
@@ -23,7 +23,7 @@ It might not seem like you can do a lot with just ones and zeros, but it turns
 out you can represent almost basically anything your heart desires.
 
 -------------------------------------------------------------------------------
-## Integers
+## Unsigned Integers
 Numbers are the first obvious item of interest.  You are used to base 10
 (meaning 10 symbols, 0 through 9) but computers obviously prefer base 2
 (meaning 2 symbols, 0 and 1).  So how do we represent the numbers we known and
@@ -60,6 +60,8 @@ bases?
 **Question: What are the maximum and minimum representable values for an 8-bit
 number using this scheme?**
 
+-------------------------------------------------------------------------------
+## Signed Integers
 This is all well and good for positive numbers, but how about negative?
 Usually we add a minus sign, but computers only have ones and zeros.  Your
 first reaction might be to add another bit to the left and maybe 0 would
@@ -97,9 +99,9 @@ being represented by a number.  One very common and very basic format is
 ASCII.  Typically any text files on your computer, including code, are stored
 in this format.  You may be able to run "man ascii" and get a nice chart of
 numbers and their corresponding letters.  Make sure to scroll down to the
-decimal set.  ASCII uses 7 bits to represent many english characters.  For more
-complex character sets, UTF8 is common, though you won't need to know about it
-here.
+decimal set.  Otherwise you can see a table here.  ASCII uses 7 bits to
+represent many english characters.  For more complex character sets, UTF8 is
+common, though you won't need to know about it here.
 
 Let's go through some simple conversion examples.
 
