--- a/scripts/0.md
+++ b/scripts/0.md
@@ -60,6 +60,30 @@ bases?
 **Question: What are the maximum and minimum representable values for an 8-bit
 number using this scheme?**
 
+Now the question arises, given a decimal number how can we convert it to a
+binary number?  The answer is the following method:
+
+1. Divide the number by 2 to get a new number and write the remainder down
+2. Divide the new number by 2 and repeat the process.
+3. Keep going until you reach zero.  If you write the remainder down from
+right to left, you will end up with the number's binary representation.
+
+This table shows the conversion process for 153.
+
+| number | remainder dividing by 2 |
+|-------:|------------------------:|
+|    153 |                       1 |
+|     76 |                       0 |
+|     38 |                       0 |
+|     19 |                       1 |
+|      9 |                       1 |
+|      4 |                       0 |
+|      2 |                       0 |
+|      1 |                       0 |
+
+**Question: What are the maximum and minimum representable values for an 8-bit
+number using this scheme?**
+
 -------------------------------------------------------------------------------
 ## Signed Integers
 This is all well and good for positive numbers, but how about negative?
@@ -124,18 +148,19 @@ common, though you won't need to know about it here.
 
 Let's go through some simple conversion examples.
 
-Say someone gives you the binary number "00110101".  First, convert it to an
-integer with the method we discussed earlier, 1 + 4 + 16 + 32 = 53.  Now check
-your handy ASCII table and find that this number corresponds to the character
-"5".  Note that this is different than the number 5 which has a binary
-representation of "00000101"!
+-------------------------------------------------------------------------------
+Say someone gives you the binary number `00110101`.  First, convert it to an
+integer with the method we discussed earlier, `1 + 4 + 16 + 32 = 53`.  Now
+check your handy ASCII table and find that this number corresponds to the
+character "5".  Note that this is different than the number 5 which has a
+binary representation of `00000101`!
 
+-------------------------------------------------------------------------------
 Now how would you find the binary representation of the letter "A"?  Just do
 the same in reverse.  Looking up the letter "A" in the ASCII table gives
-us 65.  Converting to binary is relatively easy here.  The largest power
-of 2 less than 65 is 64 (which is 2 to the power of 6) giving a remainder of 1.
-Then the 1 is a power of 2 (which is 2 to the power of 0) so we get the binary
-number "01000001"
+us 65.  Converting to binary is relatively easy here.  Dividing by 2 gives
+a remainder of 1 meaning the rightmost bit is 1.  We are left with 64 which
+we recognize is two to the power of 6, giving us the binary number `01000001`.
 
 There you have it, you know know how to read and write binary.
 
