--- a/scripts/0.md
+++ b/scripts/0.md
@@ -70,16 +70,9 @@ right to left, you will end up with the number's binary representation.
 
 This table shows the conversion process for 153.
 
-| number | remainder dividing by 2 |
-|-------:|------------------------:|
-|    153 |                       1 |
-|     76 |                       0 |
-|     38 |                       0 |
-|     19 |                       1 |
-|      9 |                       1 |
-|      4 |                       0 |
-|      2 |                       0 |
-|      1 |                       0 |
+| number                  | 153 | 76 | 38 | 19 | 9 | 4 | 2 | 1 |
+|-------------------------|----:|---:|---:|---:|--:|--:|--:|--:|
+| remainder dividing by 2 |   1 |  0 |  0 |  1 | 1 | 0 | 0 | 0 |
 
 -------------------------------------------------------------------------------
 ## Signed Integers
