--- a/scripts/0.md
+++ b/scripts/0.md
@@ -63,16 +63,25 @@ number using this scheme?**
 Now the question arises, given a decimal number how can we convert it to a
 binary number?  The answer is the following method:
 
-1. Divide the number by 2 to get a new number and write the remainder down
-2. Divide the new number by 2 and repeat the process.
-3. Keep going until you reach zero.  If you write the remainder down from
-right to left, you will end up with the number's binary representation.
+1. Start with your value and check the largest value of 2^N
+2. If 2^N can be subtracted from your value, subtract it and write down a 1
+otherwise move on and write a 0
+3. Continue until you reach zero.
 
-This table shows the conversion process for 153.
+In a single sentence: subtract the largest powers of 2 you can and count those
+as ones in the binary number.  The following is a table showing this process.
 
-| number                  | 153 | 76 | 38 | 19 | 9 | 4 | 2 | 1 |
-|-------------------------|----:|---:|---:|---:|--:|--:|--:|--:|
-| remainder dividing by 2 |   1 |  0 |  0 |  1 | 1 | 0 | 0 | 0 |
+| `n`                 |   - |   7 |  6 |  5 |   4 |  3 |  2 |  1 |   0 |
+|---------------------|----:|----:|---:|---:|----:|---:|---:|---:|----:|
+| `2^n`               |   - | 128 | 64 | 32 |  16 |  8 |  4 |  2 |   1 |
+| fits into remaning? |     | yes | no | no | yes | no | no | no | yes |
+| subtract            |     | 128 |  0 |  0 |  16 |  0 |  0 |  0 |   1 |
+| remaining           | 153 |  25 | 25 | 25 |   9 |  1 |  1 |  1 |   0 |
+
+The row of yes/no is your binary number.
+
+Note that there are more efficient ways to perform the same conversion, but
+this is the simplest to understand.
 
 -------------------------------------------------------------------------------
 ## Signed Integers
