--- a/scripts/0.md
+++ b/scripts/0.md
@@ -74,14 +74,15 @@ as ones in the binary number.  The following is a table showing this process.
 | `n`                 |   - |   7 |  6 |  5 |   4 |  3 |  2 |  1 |   0 |
 |---------------------|----:|----:|---:|---:|----:|---:|---:|---:|----:|
 | `2^n`               |   - | 128 | 64 | 32 |  16 |  8 |  4 |  2 |   1 |
-| fits into remaning? |     | yes | no | no | yes | no | no | no | yes |
-| subtract            |     | 128 |  0 |  0 |  16 |  0 |  0 |  0 |   1 |
+| fits into remaning? |   - | yes | no | no | yes | no | no | no | yes |
+| `bit`               |   - |   1 |  0 |  0 |   1 |  0 |  0 |  0 |   1 |
+| subtract            |   - | 128 |  0 |  0 |  16 |  0 |  0 |  0 |   1 |
 | remaining           | 153 |  25 | 25 | 25 |   9 |  1 |  1 |  1 |   0 |
 
 The row of yes/no is your binary number.
 
 Note that there are more efficient ways to perform the same conversion, but
-this is the simplest to understand.
+this is the simplest to understand and do by hand.
 
 -------------------------------------------------------------------------------
 ## Signed Integers
