--- a/scripts/0.md
+++ b/scripts/0.md
@@ -156,23 +156,68 @@ binary representation of `00000101`!
 -------------------------------------------------------------------------------
 Now how would you find the binary representation of the letter "A"?  Just do
 the same in reverse.  Looking up the letter "A" in the ASCII table gives
-us 65.  Converting to binary is relatively easy here.  Dividing by 2 gives
-a remainder of 1 meaning the rightmost bit is 1.  We are left with 64 which
-we recognize is two to the power of 6, giving us the binary number `01000001`.
+us `65`.  Converting to binary is relatively easy here.  The largest power
+of 2 that fits is 64 (`2^6`), leaving 1 (`2^0`) so the binary representation
+is `01000001`.
 
-There you have it, you know know how to read and write binary.
+There you have it, you know know how to read and write letters in binary.
+
+**Question: What binary number represents the character '0'?  How about '9'?**
 
 -------------------------------------------------------------------------------
 ## Floating Point Numbers
+
 Now, there is one more basic kind of number that has a non-obvious
-representation, numbers with decimal points.  The main method we will use
-to represent these numbers is called "floating point".  This is very similar
-to scientific notation.  For example consider the number 32e-4 (or 32 times
-10 to the -4).  While this number can be interpreted as the decimal number
-0.0032, we encoded its value using only the integers 32 and -4.  Note how the
-nubmer to the right of the "e" only serves to move around the decimal.  This
-is what is meant by "floating" point.  The standard floating point format
-assigns one bit to the sign of the number, some bits for the first number,
-and some bits for the second number.  Note that I am skipping over a lot of
-nuance and complexity here, but suffice it to say this will be all you need to
-know to learn basic programming.
+representation, numbers with decimal points.  The main method we will use to
+represent these numbers is called "floating point".  This is very similar to
+scientific notation.  For example consider the number `1.9e-3` (or `1.9` times
+`10` to the `-3`).  While this number can be interpreted as the decimal number
+`0.0009`, we can encode its value using only the integers `9` and `-3` (with 1
+being implied).  Note how the number to the right of the `e` only serves to
+move around the decimal.  This is what is meant by "floating" point.
+
+The formula for a standard floating point number is 
+`(-1)^s * 2^(e-127) * (1 + m)`
+
+where:
+* s is the sign bit, interpreted as an unsigned number
+* e is the exponent bits, interpreted as an unsigned number
+* m is the mantissa bits, interpreted as a fraction
+
+to interpret a binary number as a fraction, we follow a similar procedure
+to interpreting it as an unsigned integer, except the power of 2 we multiply by
+are negative powers, i.e. 0.5, 0.25, 0.125, and so on.  This allows us to
+represent values between 0 and 1.  We can also just compute the integer as
+normal and then multiply by `2^-N` where N is the number of bits.
+
+**Question: Can you prove that the method of computing the integer and then
+multiplying by 2^-N works?**
+
+In the standard 32-bit floating point format, 1 bit is given for the sign, 8
+bits are given for the `exponent` (note that the `e` now represents an exponent
+of 2 rather than 10) and the remaining 23 bits are given to the `mantissa`
+
+The exact format is typically `[1-sign bit][8-exponent bits][23 mantissa bits]`
+
+Let us take the binary sequence `01000000010010010000111111011011` as an
+example.
+
+First break it up into its components:
+
+`0 10000000 10010010000111111011011`
+
+From this,
+
+* s is 0
+* e is 128
+* the unsigned interpretation of m is 4788187, meaning the fraction
+interpretation is `4788187 * 2^-23` giving us a value of about 0.5707963
+
+Plugging this into our formula above, we get 
+`(-1)^0 * 2^(128-127) * (1 + 0.5707963) = 3.1415926...`
+
+# Conclusion
+
+Now that you are armed with knowledge of the fundamental interpretations of
+data, we are well prepared to move toward actually using and manipulating these
+values in C.
